testcases/error-cases/syntax-error-02/error.txt
error[E0002]: missing closing parenthesis
 --> testcases\error-cases\syntax-error-02\input.canon:1:7
  |
1 | config("arg1", "arg2" {
  |       ^
2 |     name = "test"
3 | }
  |
  = note: every opening parenthesis must have a matching closing parenthesis
  = help: check for missing ')' or extra '(' in your code

error[E0014]: unexpected end of file
 --> testcases\error-cases\syntax-error-02\input.canon:4:1
  |
2 |     name = "test"
3 | }
4 | 
  | ^
  |
  = note: unexpected '<EOF>', expected '='
  = note: the file ended unexpectedly
  = help: check if you are missing closing braces, parentheses, or string terminators

error: aborting due to 2 previous errors